[package]
name = "blacc_diamond_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "2.0.1"
solana-client = "2.0.1"
bs58 = "0.5"
bincode = "1.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hf-hub = "0.3.2"
async-trait = "0.1.80"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
hex = "0.4"
num_cpus = "1.16"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
base64 = "0.22"
ed25519-dalek = "2.1"
regex = "1.10"
prometheus = "0.13"
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.0", features = ["derive"] }
config = "0.14"
redis = { version = "0.25", features = ["tokio-comp"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
